Add WinRT component to play a sine tone and update volume depending on position of the rectangle on the screen. Very preliminary results.

--- a/RectangleProcessor/RectangleProcessor.vcxproj
+++ b/RectangleProcessor/RectangleProcessor.vcxproj
@@ -208,6 +208,7 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="RectangleDimensionListener.h" />
+    <ClInclude Include="SineTone.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -219,6 +220,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="RectangleDimensionListener.cpp" />
+    <ClCompile Include="SineTone.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
